# Machine-Learning

./: .gitignore
ChE-500-main/: .gitignore  README.md  makefile  pyproject.toml
ChE-500-main/data/blue/matrices/: X_blue1.npy  X_blue2.npy  X_blue3.npy  X_blue_test.npy  Y_blue1.npy  Y_blue2.npy  Y_blue3.npy  Y_blue_test.npy
ChE-500-main/data/classification/: X_classifier.npy  X_test_classifier.npy  Y_classifier.npy  Y_test_classifier.npy
ChE-500-main/data/green/matrices/: X_green1.npy  X_green2.npy  X_green3.npy  X_green4.npy  Y_green1.npy  Y_green2.npy  Y_green3.npy  Y_green4.npy
ChE-500-main/data/yellow/matrices/: X_yellow1.npy  X_yellow2.npy  X_yellow_test.npy  Y_yellow1.npy  Y_yellow2.npy  Y_yellow3.npy
ChE-500-main/src/: convert_frames.py  data_processing.py  generate_features_labels.py
ChE-500-main/src/classification/: neural_network_template.py  supervised_learning.py  unsupervised_learning.py
ChE-500-main/src/regression/: neural_network_template.py  supervised_learning.py  unsupervised_learning.py
coffee/: helpers.py  raw_train.py  raw_train_v1.py  tensor_train.py  torch_train.py
coffee/data/: data_X.npy  data_Y.npy  generate.py
coffee/functions/: helpers.py  plots.py
kaggle/titanic/: .gitignore  data_processing.py  makefile  readme.md  supervised.py  train_model.py  unsupervised.py
kaggle/titanic/matrices/test/: X.npy
kaggle/titanic/matrices/train/: X.npy  ids.npy
vehicle/: raw_train.py
vehicle/data/: Y_vehicles.npy  generate.py  test_dict.pkl
vehicle/functions/: helpers.py  plots.py
